<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="18dp"
        android:text="@string/ridge_farm_trip_booking"
        android:textColor="#D64949"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTickets"
        android:layout_width="154dp"
        android:layout_height="51dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="59dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDate"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/rdbgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTickets">

        <RadioButton
            android:id="@+id/singlePass"
            android:layout_width="290dp"
            android:layout_height="44dp"
            android:text="@string/singlePass" />

        <RadioButton
            android:id="@+id/seasonPass"
            android:layout_width="293dp"
            android:layout_height="48dp"
            android:text="@string/seasonPass" />

    </RadioGroup>

    <Button
        android:id="@+id/btnconvert"
        android:layout_width="147dp"
        android:layout_height="45dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="132dp"
        android:text="@string/btnConvert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdbgroup" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="278dp"
        android:layout_height="63dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="34dp"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnconvert" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="245dp"
        android:layout_height="144dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/todow"
        app:layout_constraintBottom_toTopOf="@+id/edtTickets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:srcCompat="@drawable/ridge" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="19dp"
        android:background="@android:color/darker_gray"
        android:padding="10dp"
        android:text="@string/select_a_date"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/edtTickets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>